# league_planner

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  docker-entrypoint.sh  how_to_run_locally.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pull-request.yaml
league_planner/: apps.py  filters.py  settings.py  urls.py
league_planner/integrations/: weather.py
league_planner/migrations/: 0001_initial.py  0002_alter_league_owner_delete_user.py  0003_alter_league_name_alter_team_name.py  0006_alter_team_city.py  0007_alter_team_options.py  0008_alter_match_host_alter_match_visitor.py
league_planner/models/: league.py  match.py
league_planner/serializers/: league.py  match.py  team.py  user.py
league_planner/tests/: conftest.py  factories.py  test_league_crud.py  test_match_crud.py  test_scoreboard.py  test_team_crud.py
league_planner/tests/league/: test_league_crud.py
league_planner/views/: league.py  match.py  team.py  user.py
src/: gunicorn_config.py  manage.py
src/league_planner/: apps.py  asgi.py  filters.py  pagination.py  permissions.py  settings.py  urls.py  wsgi.py
src/league_planner/migrations/: 0001_initial.py  0002_alter_league_owner_delete_user.py  0003_alter_league_name_alter_team_name.py  0004_alter_league_owner.py  0005_alter_league_options_alter_team_city_alter_team_name.py  0006_alter_team_city.py  0007_alter_team_options.py  0008_alter_match_host_alter_match_visitor.py  0009_alter_match_options.py
src/league_planner/models/: match.py  team.py
src/league_planner/serializers/: league.py  match.py  team.py  user.py
src/league_planner/tests/: conftest.py  factories.py  test_league_crud.py  test_match_crud.py  test_scoreboard.py  test_team_crud.py
src/league_planner/views/: league.py  match.py  team.py  user.py
